# consumer-payments-hackathon

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  cinebot_system_prompt.md  pyproject.toml  requirements.txt
.cursor/rules/: kapso-hackathon-setup.mdc
.github/workflows/: ci.yml
app/: bot.py  config.py  debt_coach.py  main.py  receipts_memory.py
app/agents/: __init__.py  history.py  models.py  runner.py  (+5 more)
config/: agents.json
docs/: 00-context-prompt.md  01-brain-prompt.md  02-gemini-integration-prompt.md  03-brain-tests-prompt.md  04-gemini-bot-tests-prompt.md  05-profile-update-prompt.md  06-profile-update-tests-prompt.md  07-landing-page-prompt.md  Concierge (1).md  DEMO.md  PRD-BioVibe.md  PRD-WhatsApp-Debt-Budget-Yield-Savings.md  TASKS-PRD-sections-10-11-debt-coach.md
flows/: payment_flow.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
ideas/: main.py
scripts/: buy_ticket_smoke.py
tests/: test_agent_history.py  test_agent_reply_cleanup.py  test_agent_tool_access.py  test_app.py  test_booking_store.py  test_bot.py  test_brain.py  test_buy_ticket.py  test_concierge.py  test_debt_coach.py  test_felix_pay_bot_flow.py  test_felix_pay_domain.py  test_felix_pay_wallet.py  test_fx_intel.py  test_gemini_client.py  test_i18n.py  test_kapso_client.py  test_movie_showtimes_skill.py  test_payment_flow.py  test_payments_store.py  test_pricing.py  test_rates_service.py  test_recipients_and_compare.py  test_stripe_webhook.py  test_ticket_service.py  test_vendors.py  test_webhook_felix_flow.py
web/: index.html
(+64 files in other folders)
